--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class = "box1" >
-<div class = "logo"><a href="https://www.facebook.com/" title="Go to Facebook home"><img src="Capture.png"height="40px" width="178px" /></a></div>
+<div class = "logo"><a href="https://www.facebook.com/" title="Go to Facebook home"><img src="Capture.PNG" height="40px" width="178px" /></a></div>
 <div class="text11">Email or Phone</div>
 <form class="email"><input type="text" class="emailbox"></form>
 <div class="text12">Password</div>
